# orchestrator-core

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: HANDOFF.md  QUALITY_GATE.md  index.md
docs/adr/: 0001-architect-comparison.md  002-runtime-boundaries.md
scripts/: bootstrap_check.py
src/orchestrator/: main.py  pipeline.py  workspace.py
src/orchestrator/agents/: architect.py  executor.py  scout.py  validator.py
src/orchestrator/clients/: anthropic_client.py  bootstrap.py  gemini_client.py  groq_client.py
src/orchestrator/observability/: __init__.py  events.py  logger.py
src/orchestrator/schemas/: architect_output.py  config.py  executor_output.py  pipeline_run.py  scout_output.py  validator_output.py
tests/: conftest.py  test_architect.py  test_executor.py  test_observability.py  test_pipeline.py  test_schemas.py  test_scout.py  test_validator.py
